[package]
name = "bevy_ui_material"
version = "0.1.0"
edition = "2021"
authors = ["Felix de Maneville <felix.maneville@gmail.com>"]
license-file = "./LICENSE"
repository = "https://github.com/ManevilleF/bevy_ui_material"
readme = "README.md"
description = "Plugin to use materials for UI"
keywords = ["bevy", "UI", "material"]
exclude = ["examples", "docs", ".github", ".gitignore", "assets"]
documentation = "http://docs.rs/bevy_ui_material"
categories = ["game-engines", "game-development"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_ui = "0.6"
bevy_sprite = "0.6"
bevy_math = "0.6"
bevy_ecs = "0.6"
bevy_render = "0.6"
bevy_transform = "0.6"
bevy_asset = "0.6"
bevy_app = "0.6"
copyless = "0.1"